# yupml

./: README.md  dune-project  yupml.install
_build/: .db  .digest-db  log
_build/default/: META.yupml  README.md  yupml.dune-package  yupml.install  yupml.opam
_build/default/.ppx/3aba1eda4deeeb3e7ff190bda4b5a4ad/: dune__exe___ppx.cmo
_build/default/.ppx/a4ea0d83c521725fd7b0167e93f2550b/: dune__exe___ppx.cmo
_build/default/examples/server/: db.json  example-server.dune-package  example-server.install
_build/default/lib/: schema.mli  validate.ml  yupml.cma  yupml.cmxa  yupml.cmxs  yupml.ml  yupml__.ml-gen
_build/default/lib/.merlin-conf/: lib-yupml
_build/default/lib/.yupml.objs/: errors.ml.d  schema.ml.d  schema.mli.d  validate.ml.d  yupml.impl.all-deps  yupml.ml.d  yupml__Errors.impl.all-deps  yupml__Schema.impl.all-deps  yupml__Validate.impl.all-deps
_build/default/lib/.yupml.objs/byte/: yupml__.cmi  yupml__.cmo  yupml__.cmt  yupml__Errors.cmi  yupml__Errors.cmo  (+8 more)
_build/default/tests/: json.cma  json.cmxa  json.cmxs  test_yup_number.ml
_build/default/tests/.merlin-conf/: exe-test_yup_list  exe-test_yup_number  exe-test_yup_string  lib-json
examples/server/_build/: .db  .digest-db  .to-delete-in-source-tree  log
examples/server/_build/default/: db.json
examples/simple/: .ocamlformat  dune-project
examples/simple/_build/: .db  .digest-db  log
examples/simple/_build/default/: simple.dune-package  simple.install
lib/: dune  errors.ml  schema.ml  schema.mli  validate.ml  yupml.ml
tests/: dune  json.ml  test_yup_list.ml  test_yup_string.ml
(+64 files in other folders)
